# physics-integration-test

./: .gitignore  .gitmodules  ARCH_STATE.md  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: windows-build.yml
docs/: developer-guide.md
docs/architecture-guides/: ARCH-0006-character-system.md  ARCH-0007-component-type-purity.md  ARCH-0008-physics-handle-isolation.md  ARCH-0009-event-system.md  ARCH-0010-scene-serialization.md  ARCH-0011-audio-system.md  ARCH-0012-debug-overlay.md  ARCH-0013-module-convention.md  _TEMPLATE.md
docs/guides/: developer-guide.md  jolt-physics.md
docs/rfcs/: README.md  _TEMPLATE.md
docs/rfcs/00-proposals/: 0007-component-type-purity.md
docs/rfcs/02-implemented/: 0000-prototype-baseline.md  0004-robust-gamepad-discovery.md  0005-unified-input-state.md  0006-character-system-decomposition.md  0007-component-type-purity.md  0008-physics-handle-isolation.md  0009-event-system.md  0010-scene-serialization.md  0011-audio-system.md  0012-debug-overlay.md  0013-module-convention.md  0014-platform-builder-raycast.md
docs/thoughts/: 0006-refactor-character-system.md  engine-architecture-strategy.md  engine-game-separation.md  template-molecule-builder.md
resources/scenes/: default.json
resources/shaders/: lighting.fs  lighting.vs
rfcs/: 0001-architectural-overhaul.md  0002-testing-suite.md  0003-ci-rolling-release.md
scripts/: build.bat  build.sh  update_and_run.bat
src/: assets.hpp  audio_resource.hpp  components.hpp  debug_panel.hpp  events.hpp  input_state.hpp  main.cpp  math_util.hpp  physics_context.hpp  physics_handles.hpp  pipeline.hpp  scene.cpp  scene.hpp
src/modules/: audio_module.hpp  builder_module.hpp  camera_module.hpp  character_module.hpp  debug_module.hpp  event_bus_module.hpp  input_module.hpp  physics_module.hpp  render_module.hpp
src/systems/: audio.cpp  audio.hpp  builder.cpp  builder.hpp  camera.cpp  camera.hpp  character.cpp  character.hpp  character_input.cpp  character_input.hpp  character_motor.cpp  character_motor.hpp  character_state.cpp  character_state.hpp  debug.cpp  debug.hpp  gamepad.cpp  gamepad.hpp  input_gather.cpp  input_gather.hpp  keyboard.cpp  keyboard.hpp  physics.cpp  physics.hpp  player_input.cpp  player_input.hpp  renderer.cpp  renderer.hpp
tests/: logic_tests.cpp  main.cpp
